--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,32 @@ div
 }
 #welcomemessage
 {
+  width: 200px;
   valign: top;
   padding: 10px;
+}
+#contact_area
+{
+  padding: 20px;
+}
+#submit_form
+{
+  align: center;
+  width: 340px;
+}
+#message_area
+{
+  align: center;
+  font-size: 20px;
+  width: 300px;
+  height: 150px;
+  border: 5px;
+  padding: 5px;
+  border-color: #C20000;
+  border-style: solid;
+  resize: none;
+  font-style: bold;
+  font-family: "Arial", "Verdana", Sans-serif;
 }
 .toplink
 {
@@ -111,14 +135,14 @@ div
 #newpostbutton
 {
   color: #000000;
-  padding: 20px;
-	background: transparent;
-	border-width: 3px;
-	border-color: #C20000;
-	border-style: solid;
-	font-style: bold;
-	font-family: "Arial", "Verdana", Sans-serif;
-	font-size: 1em;
+  padding: 5px;
+  background: transparent;
+  border-width: 3px;
+  border-color: #C20000;
+  border-style: solid;
+  font-style: bold;
+  font-family: "Arial", "Verdana", Sans-serif;
+  font-size: 1em;
 }
 .responsebutton
 {
@@ -196,4 +220,12 @@ a:visited
 { 
 	color: #FFFFFF;
 	text-decoration: none;
+}
+#submit_header
+{
+color: #000000;
+font-size: 1.5em;
+font-style: bold;
+font-family: "Arial", "Verdana", Sans-serif;
+}
 }
